--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -10,10 +10,12 @@
   padding-left: 40px;
   padding-right: 40px;
   display: flex;
+  gap: 10px;
   align-items: center;
   justify-content: space-between;
   font-size: 24px;
 }
+
 .btn {
   background-color: rgb(140, 140, 140);
   color: white;
@@ -51,4 +53,10 @@
 .isActive {
   text-decoration: underline;
   color: rgb(243, 100, 100);
+}
+@media screen and (max-width: 400px) {
+  .nav {
+    padding: 0 15px;
+    font-size: 20px;
+  }
 }
