--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   padding: 20px;
   margin: 0 auto;
-  max-width: 400px;
+  min-width: 400px;
   background-color: #c0bfbf;
   border-radius: 10px;
   margin-top: 50px;
