--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -32,3 +32,11 @@
 .btn:hover {
   transform: scale(0.9);
 }
+@media screen and (max-width: 570px) {
+  .container {
+    font-size: 18px;
+  }
+  .btn {
+    margin-top: 10px;
+  }
+}
