--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -24,8 +24,9 @@
   transition: all 0.5s ease;
 }
 .contacts {
-  margin-right: 300px;
+  margin-right: 40px;
 }
+
 .text {
   margin-right: 50px;
   font-size: 18px;
@@ -58,5 +59,40 @@
   .nav {
     padding: 0 15px;
     font-size: 20px;
+  }
+}
+@media screen and (max-width: 925px) {
+  .nav {
+    padding: 0 10px;
+  }
+  .contacts {
+    margin-right: 10px;
+  }
+}
+@media screen and (max-width: 640px) {
+  .header {
+    height: 80px;
+  }
+  .text {
+    margin-right: 10px;
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
+  }
+  .nav {
+    font-size: 18px;
+  }
+  span {
+    font-size: 16px;
+  }
+  .contacts {
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .text {
+    display: none;
   }
 }
