--- a/src/pages/ContactsPage/ContactsPage.module.css
+++ b/src/pages/ContactsPage/ContactsPage.module.css
@@ -7,13 +7,22 @@
   top: 60px;
   left: 20px;
 }
-.search input {
-  margin-bottom: 40px;
-}
+
 .title {
   text-align: center;
   color: rgb(241, 239, 239);
   font-size: 50px;
   text-shadow: 2px 2px 4px rgb(170, 170, 170);
   letter-spacing: 0.05em;
+}
+@media screen and (max-width: 570px) {
+  .container {
+    flex-direction: column;
+    padding: 0 15px;
+    gap: 20px;
+    margin-top: 20px;
+  }
+  .search {
+    width: 90%;
+  }
 }
