--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -37,8 +37,11 @@
 @media screen and (max-width: 640px) {
   .list {
     display: grid;
-
     justify-content: center;
+  }
+  .empty {
+    font-size: 24px;
+    top: 60%;
   }
 }
 @media screen and (max-width: 570px) {
